# TrisProject

./: .gitignore  .pylintrc  docker-compose.yml  info.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_03_06_1436-0c5be4188509_init.py
backend/src/: config.py  database.py  main.py  models.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
backend/src/authorization/: crud.py  exceptions.py  models.py  router.py  schemas.py
backend/src/users/: __init__.py  crud.py  dependencies.py  exceptions.py  mixins.py  models.py  router.py  schemas.py
backend/tests/: conftest.py
backend/tests/auth/: conftest.py  test_auth.py
backend/tests/authorization/: conftest.py  test_authorization.py
backend/tests/user/: conftest.py  test_user.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: apiinstanse.js  auth.js  index.ts  users.js
frontend/src/api/admin/: index.ts  users.js
frontend/src/assets/: main.css
frontend/src/assets/scss/: base.scss  global.scss  main.scss  reset.scss
frontend/src/components/: Header.vue
frontend/src/components/admin/: LeftAdminMenu.vue
frontend/src/components/auth/: LoginPopUp.vue  RegisterPopUp.vue  newFile.1.js
frontend/src/layouts/: AdminLayout.vue  DefaultLayout.vue
frontend/src/router/: admin.js  auth.js  index.js
frontend/src/store/: auth.ts  index.js  popup.ts  types.ts  user.ts
frontend/src/views/: AboutView.vue  HomeView.vue
(+22 files in other folders)
